# inspire-classifier

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  README.md  README.rst  boot.sh  build.sh  deploy.sh  deploy_to_openshift.sh  pyproject.toml  requirements.txt  run-tests.sh  setup.cfg  setup.py  travis.sh
.github/workflows/: build.yml  build_and_test.yml  bump-and-publish.yml  pre-commit.yml  pull-request-master.yml  push-master.yml  test-python.yml
docker/: Dockerfile  requirements.txt
docs/: conf.py  generate_training_data.rst  index.rst  installation.rst
generate_training_data_scripts/: article.py  combine_core_noncore_rejected_data.py  generate_core_and_noncore_data.py  get_core_and_non_core_arxiv_identifiers.py  get_core_and_non_core_recids.py  makejson.py  trigger_harvest.sh
inspire_classifier/: __init__.py  api.py  app.py  cli.py  config.py  date.py  flask_app.py  serializers.py  utils.py
inspire_classifier/core/: __init__.py  api.py  model.py  preprocessor.py  utils.py
inspire_classifier/core/ml/: __init__.py  models.py
inspire_classifier/core/preprocessor/: __init__.py
inspire_classifier/domain/: __init__.py  models.py  preprocessor.py
scripts/: README.md  create_dataset.py  train_classifier.py  upload_to_s3.py
tests/integration/: conftest.py  test_api.py  test_app.py  test_classifier_api.py  test_utils.py
tests/integration/fixtures/: inspire_test_data.df
tests/unit/: test_api.py  test_classifier_api.py  test_cli.py
