[tool.poetry]
name = "inspire-classifier"
version = "2.0.5"
description = "INSPIRE package aimed to automatically classify the new papers that are added to INSPIRE, such as if they are core or not."
authors = ["CERN <admin@inspirehep.net>"]
license = "MIT License"
homepage = "https://inspirehep.net"
repository = "https://github.com/inspirehep/inspire-classifier"
readme = "README.md"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{ include = "inspire_classifier" }]
include = ["inspire_classifier/models/classifier_model/classifier.h5"]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
fastai = "<2.8.0"
numpy = "^2.3.4"
click = "^8.0.0"
click-spinner = "^0.1.10"
tqdm = "^4.67.1"
pandas = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
inspire-classifier = "inspire_classifier.cli:inspire_classifier"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)",
    "mock (>=5.2.0,<6.0.0)"
]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "inspire-utils (>=3.0.66,<4.0.0)",
    "elasticsearch (<7.14.0)",
    "elasticsearch-dsl (==7.4.0)"
]
